tests/models/struct/unnamed/f32/fail/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    f32
);
fn main() {}
